@@ -14,10 +14,10 @@ angelsmods.functions.RB.build({
             enabled = false,
             ingredients = {
                 {"algae-farm-3", 1},
-                {"t4-plate", 2},
-                {"t4-circuit", 5},
-                {"t4-brick", 5},
-                {"t4-pipe", 10},
+                {"t5-plate", 11},
+                {"t5-circuit", 4},
+                {"titanium-concrete-brick", 11},
+                {"t5-pipe", 18},
             },
             result= "algae-farm-4",
         },
@@ -26,10 +26,10 @@ angelsmods.functions.RB.build({
             enabled = false,
             ingredients = {
                 {"algae-farm-3", 1},
-                {"t4-plate", 10 * buildingmulti},
-                {"t4-circuit", 5 * buildingmulti},
-                {"t4-brick", 5 * buildingmulti},
-                {"t4-pipe", 10 * buildingmulti},
+                {"t5-plate", 11 * buildingmulti},
+                {"t5-circuit", 4 * buildingmulti},
+                {"titanium-concrete-brick", 11 * buildingmulti},
+                {"t5-pipe", 18 * buildingmulti},
             },
             result= "algae-farm-4",
         },
